<resources>
    <string name="app_name">widget</string>
    <string name="widget_user_input">输入内容：</string>
    <string name="widget_normal_use">基本使用</string>
    <string name="widget_show_encry">显示密文</string>
    <string name="widget_count">个数</string>
    <string name="widget_space">间隔</string>
    <string name="widget_input_correct">输入正确</string>
    <string name="widget_input_code">输入验证码</string>
    <string name="widget_privacy_message">请输入验证码，用以确定身份</string>
    <string name="widget_password_correct">密码正确</string>
    <string name="widget_password_error">密码输入错误，密码为: %s</string>

    <string name="widget_title">控件</string>
    <string name="widget_subtitle">使用Kotlin来自定义控件</string>


    <string name="widget_privacy_title">验证码控件示例</string>
    <string name="widget_privacy_desc">仿微信密码、验证码输入控件</string>

    <string name="widget_privacy_title_base_use">基本使用示例</string>
    <string name="widget_privacy_title_base_use_desc">仿微信密码、验证码输入控件</string>

    <string name="widget_privacy_title_dialog_use">嵌入到Dialog中</string>
    <string name="widget_privacy_title_dialog_use_desc">嵌入到Dialog中，类似于支付宝、微信输入密码</string>
    <string name="widget_palette_view_title">带有阴影的ImageView</string>
    <string name="widget_palette_view_desc">带有阴影的ImageView</string>
    <string name="widget__image_radius">图片半径</string>
    <string name="widget__shadow_radius">阴影半径</string>
    <string name="widget__x_offset">X偏移量</string>
    <string name="widget__y_offset">Y偏移量</string>
    <string name="widget__next">下一个</string>

    <string name="widget_nestted_title_zhy">鸿洋的嵌套滑动例子</string>
    <string name="widget_nestted_title">嵌套滑动</string>
    <string name="widget_nestted_vertical">垂直嵌套滑动</string>
    <string name="widget_nestted_horiz">水平嵌套滑动</string>
    <string name="widget_nestted_nested_test">嵌套滑动测试（nested）</string>
    <string name="widget_nestted_nested_vertical">垂直嵌套滑动（nested）</string>
    <string name="widget_nestted_product_detail_vertical">商品详情页（nested）</string>


</resources>
