<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="test.com.widget.ui.PaletteImageViewActivity">

    <test.com.widget.widget.PaletteImageView
        android:layout_gravity="center_horizontal"
        android:id="@+id/palette"
        app:paletteSrc="@mipmap/widget_caocao"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />
    
    <Button
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/btn_next"
        android:text="@string/widget__next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget__image_radius" />

        <SeekBar
            android:id="@+id/seekbar_image_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget__shadow_radius" />

        <SeekBar
            android:id="@+id/seekbar_shadow_radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget__x_offset" />

        <SeekBar
            android:id="@+id/seekbar_x_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/widget__y_offset" />

        <SeekBar
            android:id="@+id/seekbar_y_offset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100" />
    </LinearLayout>

</LinearLayout>
